--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-gtm-module": "^2.0.8",
     "react-helmet": "^5.2.1",
     "react-html-parser": "^2.0.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-intl-tel-input": "^7.1.0",
     "react-markdown": "^4.2.2",
     "react-modal": "^3.11.1",
