fix: github workflow

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lhbot": "lighthousebot -- --pwa=95 --perf=95 --seo=95 --a11y=95 --bp=95",
     "gimbal-audit": "gimbal audit --config ./.gimbalrc.yml",
     "precommit": "lint-staged",
-    "lint": "eslint .",
+    "lint": "eslint --ext .js src",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
@@ -33,6 +33,7 @@
     "@modus/gimbal-plugin-axe": "^1.2.6",
     "@modus/gimbal-plugin-last-value": "^1.2.6",
     "@modus/gimbal-plugin-sqlite": "^1.2.6",
+    "@next/bundle-analyzer": "^9.3.4",
     "@uppy/aws-s3": "^1.5.1",
     "@uppy/core": "^1.8.1",
     "@uppy/dashboard": "^1.6.1",
