--- a/.github/workflows/gimbal.yml
+++ b/.github/workflows/gimbal.yml
@@ -1,4 +1,4 @@
-name: Pull Request Deploy
+name: Gimbal
 on:
   pull_request:
     branches:
@@ -8,6 +8,18 @@ jobs:
   gimbal:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out the code
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - name: Install node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: Install npm dependencies
+        run: npm i
+      - name: Build
+        run: npm run build
       - name: Performance Budgeting Regression Testing
         uses: ModusCreateOrg/gimbal/action@master
         env:
